Feature: Added initial way to filter movies through search component

--- a/src/app/components/movie-viewer/movie-viewer.component.html
+++ b/src/app/components/movie-viewer/movie-viewer.component.html
@@ -1,5 +1,5 @@
 <section>
-  <app-header></app-header>
+  <search></search>
   <div class="movie-viewer-layout">
     <div class="sidebar" style="background-color: rgba(118, 123, 124, 0.365)">
       <movies-list [movies]="movies$ | async"></movies-list>
